--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>My Trash webiste</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        </head>
 <body>
     <p>Welcome to my webiste peasant</p>
-    <table bgcolor="magenta">
-       <tr bgcolor="grey">
-            <th width="100">Monday</th>
-            <th width="100">Tuesday</th>
-            <th width="100">Wednesday</th>
-            <th width="100">Thursday</th>
-            <th width="100">Friday</th>
-            <th width="100">Saturday</th>
-            <th width="100">Sunday</th>
-        </tr> 
-        <tr bgcolor="grey">
-        <td>9hrs</td>
-        <td>9hrs</td>
-        <td>9hrs</td>
-        <td>9hrs</td>
-        <td>8hrs</td>
-        <td>4hrs</td>
-        <td>None</td>
-        </tr>
-    </table>
+    <iframe src="ad.html" width="700" height="600">
 </body>
 </html>
