--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         </head>
 <body>
-    <p>Welcome to my webiste peasant</p>
-    
+    <p>Welcome to my trash webiste</p>
+    <img src="Welcome.png" width="800">
 </body>
 </html>
